# geant4-simulationmimega

./: .gitignore  Action.cc  Action.hh  CMakeLists.txt  Detector.cc  Detector.hh  DetectorConstruction.cc  DetectorConstruction.hh  Event.cc  Event.hh  Generator.cc  Generator.hh  Physics.cc  Physics.hh  README  README.md  Run.cc  Run.hh  Sim.cc  Stepping.cc  Stepping.hh  run.mac  run_cosmic.mac  scintEff_run.mac  vis.mac
